frontends/web/src/components/sidebar/sidebar.css
.sidebarOverlay {
    position: fixed;
    background-color: rgba(0, 0, 0, 0.3);
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    z-index: -1;
    opacity: 0;
    animation-delay: 0.2s;
    transition: all ease 0.2s;
}

.sidebarOverlay.active {
    opacity: 1;
    z-index: 4001;
}

.sidebar {
    position: fixed;
    margin-left: -70%;
    align-content: stretch;
    background-color: var(--color-dark);
    display: flex;
    flex-direction: column;
    flex-shrink: 0;
    height: 100vh;
    padding: 0 0 var(--spacing-default) 0;
    width: 70%;
    z-index: 4002;
    overflow-y: auto;
    transition: all 0.2s ease;
}

.sidebar.forceShow {
    margin-left: 0;
}

.sidebar .sidebarLogoContainer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 80px;
    padding: calc(var(--spacing-default) + var(--spacing-half)) var(--spacing-large);
    background-size: cover;
    background-color: rgba(0, 0, 0, 0.1);
    opacity: 1;
    transition: opacity 0.2s ease;
}

.sidebarLogoContainer img {
    margin-bottom: 0;
    width: auto !important;
    height: 24px !important;
}

.sideBarItem {
    position: relative;
    display: block;
}

.sidebar a {
    position: relative;
    color: white;
    cursor: default;
    padding: var(--spacing-default) 0;
    margin: 10px 10px 0 10px;
    text-decoration: none;
    overflow: hidden;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    border-radius: 2px;
}

a.sidebar-active {
    text-decoration: none;
    background-color: rgba(255, 255, 255, 0.1);
}

.sidebar .stacked,
.sidebar .single {
    margin: 0 var(--spacing-default) 0 var(--spacing-large);
}

.sidebar .stacked img,
.sidebar .single img {
    display: inherit;
}

a.sidebar-active .sidebar_label,
.sidebar a:hover .sidebar_label {
    color: var(--color-white);
}

.sidebar a.sidebar-active .sidebar_label {
    font-weight: bold;
}

a.sidebar-active .stacked img:first-child,
.sidebar a:hover .stacked img:first-child {
    opacity: 0;
}

a.sidebar-active .stacked img:last-child,
.sidebar a:hover .stacked img:last-child {
    opacity: 1;
}

.stacked {
    position: relative;
}

.stacked img {
    transition: opacity 0.2s ease;
}

.stacked img:last-child {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
}

.sidebar img {
    width: 26px;
    height: auto;
    -webkit-transform-style: preserve-3d;
    -webkit-backface-visibility: hidden;
}

.single img {
    opacity: .6;
    transition: opacity 0.2s ease;
}

a.sidebar-active .single img,
.sidebar a:hover .single img {
    opacity: 1;
}

.sidebar_label {
    color: var(--color-secondary);
    line-height: 1;
    flex: 1;
    padding-top: 0;
    font-size: var(--size-medium);
    transition: all 0.2s ease;
}

.sidebar_drawer {
    align-self: stretch;
    flex-grow: 1;
}

.sidebar_bottom {
    padding: var(--spacing-half) 0 0 0;
}

@media (min-width: 901px) {
    .sidebarContainer .sidebar {
        position: relative;
        margin-left: 0;
        width: var(--sidebar-width-large);
    }

    .sidebarContainer .sidebar a {
        display: flex;
        flex-direction: row;
        justify-content: flex-start;
        align-items: center;
    }

    .sidebar .sidebarLogoContainer {
        padding: var(--spacing-large) var(--spacing-large);
        height: 96px;
    }

    .sidebar .sidebarLogoContainer a {
        display: none !important;
    }

    .sidebar a::after {
        display: block;
    }

    .sidebar:not(.withGuide) a.sidebar-active {}

    .sidebar .stacked,
    .sidebar .single {
        margin: 0 var(--spacing-half) 0 calc(var(--spacing-default) + var(--spacing-half));
    }

    .sidebar:not(.withGuide) .stacked img,
    .sidebar:not(.withGuide) .single img {
        display: inherit;
    }

    .sidebar .sidebar_label {
        flex: 1;
        padding-top: 0;
        font-size: var(--size-small);
        text-align: left;
    }

    .sidebar:not(.withGuide) a.sidebar-active .sidebar_label {
        font-weight: bold;
    }
}

